--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </a>
           </div>
 
-          <h1 class="title">
+          <h1 class="header-title wowUp">
             Miami<br>
             Condo Kings
           </h1>
@@ -35,7 +35,7 @@
             <img src="images/close.svg" class="icon-show icon-close" alt="icon-close">
             <ul class="nav__list">
               <li class="nav__item">
-                <a href="#" class="nav__link active">Home</a>
+                <a href="#" class="nav__link nav__link--active">Home</a>
               </li>
               <li class="nav__item">
                 <a href=".aboutUs" class="nav__link go-to">About Us</a>
