--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </a>
           </div>
 
-          <h1 class="header-title wowUp">
+          <h1 class="header-title wowRight">
             Miami<br>
             Condo Kings
           </h1>
@@ -67,11 +67,11 @@
       <main class="main">
         <div class="wrap">
           <section class="estate aboutUs">
-            <h2 class="estate__title">
+            <h2 class="estate__title" id="animateRight">
               Miami best<br>  Real estate <span>here</span>
             </h2>
 
-            <article class="estate__info">
+            <article class="estate__info" id="animateLeft">
               <h3 class="subtitle">Over 50 years experience in love.</h3>
               <p class="estate__info-text article">
                 Mazel and VA Tsukkerman in his "Analysis of musical works." Pointillism,
@@ -163,7 +163,7 @@
           <section class="section section-indent testimonialsTop">
             <h2 class="common-title">Testimonials</h2>
             <div class="testimonials">
-              <div class="testimonials__item">
+              <div class="testimonials__item" id="item-left">
                 <img src="images/people/1.jpg" alt="people" class="testimonials__img">
                 <h3 class="subtitle">Leslie Mckinney</h3>
                 <h4 class="testimonials__description description">CEO</h4>
@@ -172,7 +172,7 @@
                 </p>
               </div>
 
-              <div class="testimonials__item">
+              <div class="testimonials__item" id="item-top">
                 <img src="images/people/2.jpg" alt="people" class="testimonials__img">
                 <h3 class="subtitle">Scarlett Hawkins</h3>
                 <h4 class="testimonials__description description">Senior Vice President</h4>
@@ -182,7 +182,7 @@
                 </p>
               </div>
 
-              <div class="testimonials__item">
+              <div class="testimonials__item" id="item-right">
                 <img src="images/people/3.jpg" alt="people" class="testimonials__img">
                 <h3 class="subtitle">Max Henry</h3>
                 <h4 class="testimonials__description description">Chief Design Officer</h4>
@@ -250,14 +250,13 @@
             $(".nav").slideUp();
           });
 
-          $(document).ready(function(){
-            $(".go-to").on("click", function (event) {
-              event.preventDefault();
-              var id  = $(this).attr('href'),
-                top = $(id).offset().top;
-              $('body,html').animate({scrollTop: top - 30}, 1500);
-            });
+          $(".go-to").on("click", function (event) {
+            event.preventDefault();
+            var id  = $(this).attr('href'),
+              top = $(id).offset().top;
+            $('body,html').animate({scrollTop: top - 30}, 1500);
           });
+
         });
       </script>
     </body>
