--- a/index.html
+++ b/index.html
@@ -143,17 +143,17 @@
               </article>
 
               <form class="form">
-                <div class="form__item">
+                <label class="form__item">
                   <input type="text" placeholder="Name" name="name" class="form__input">
-                </div>
+                </label>
 
-                <div class="form__item">
+                <label class="form__item">
                   <input type="tel" placeholder="Phone" name="phone" class="form__input">
-                </div>
+                </label>
 
-                <div class="form__item">
+                <label class="form__item">
                   <input type="email" placeholder="Email" name="email" class="form__input">
-                </div>
+                </label>
 
                 <button class="form__btn btn">Consultation</button>
               </form>
@@ -213,17 +213,17 @@
               </div>
 
               <form class="form">
-                <div class="form__item">
+                <label class="form__item">
                   <input type="text" placeholder="Name" name="name" class="form__input">
-                </div>
+                </label>
 
-                <div class="form__item">
+                <label class="form__item">
                   <input type="tel" placeholder="Phone" name="phone" class="form__input">
-                </div>
+                </label>
 
-                <div class="form__item">
+                <label class="form__item">
                   <textarea name="message" placeholder="Message" class="form__textarea form__input"></textarea>
-                </div>
+                </label>
 
                 <button class="form__btn btn">Consultation</button>
               </form>
