--- a/index.html
+++ b/index.html
@@ -27,40 +27,42 @@
             </a>
           </div>
 
-          <h1 class="header-title wowRight">
-            Miami<br>
-            Condo Kings
-          </h1>
-          <nav class="nav">
-            <img src="images/close.svg" class="icon-show icon-close" alt="icon-close">
-            <ul class="nav__list">
-              <li class="nav__item">
-                <a href="#" class="nav__link nav__link--active">Home</a>
-              </li>
-              <li class="nav__item">
-                <a href=".aboutUs" class="nav__link go-to">About Us</a>
-              </li>
-              <li class="nav__item">
-                <a href=".galleryTop" class="nav__link go-to">gallery</a>
-              </li>
-              <li class="nav__item">
-                <a href=".consultationTop" class="nav__link go-to">consultation</a>
-              </li>
-              <li class="nav__item">
-                <a href=".testimonialsTop" class="nav__link go-to">testimonials</a>
-              </li>
-              <li class="nav__item">
-                <a href=".contactTop" class="nav__link go-to">Contacts</a>
-              </li>
-            </ul>
+          <div class="header__content">
+            <h1 class="header-title wowRight">
+              Miami<br>
+              Condo Kings
+            </h1>
+            <nav class="nav">
+              <img src="images/close.svg" class="icon-show icon-close" alt="icon-close">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a href="#" class="nav__link nav__link--active">Home</a>
+                </li>
+                <li class="nav__item">
+                  <a href=".aboutUs" class="nav__link go-to">About Us</a>
+                </li>
+                <li class="nav__item">
+                  <a href=".galleryTop" class="nav__link go-to">gallery</a>
+                </li>
+                <li class="nav__item">
+                  <a href=".consultationTop" class="nav__link go-to">consultation</a>
+                </li>
+                <li class="nav__item">
+                  <a href=".testimonialsTop" class="nav__link go-to">testimonials</a>
+                </li>
+                <li class="nav__item">
+                  <a href=".contactTop" class="nav__link go-to">Contacts</a>
+                </li>
+              </ul>
 
-            <a href="tel:+1 234 555-55-55" class="header__top-text phone nav-item">
-              +1 234 555-55-55
-            </a>
-            <a href="#" class="header__top-text order nav-item">
-              call to order
-            </a>
-          </nav>
+              <a href="tel:+1 234 555-55-55" class="header__top-text phone nav-item">
+                +1 234 555-55-55
+              </a>
+              <a href="#" class="header__top-text order nav-item">
+                call to order
+              </a>
+            </nav>
+          </div>
         </div>
       </header>
 
