--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -169,8 +169,8 @@
           <div class="wrapper">
             <h2 class="title">
               <ul>
-                <li>На всех ваших</li>
-                <li>устройствах</li>
+                На всех ваших<br>
+                устройствах
               </ul>
             </h2>
             <p class="text control__text">
